--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "require": {
         "illuminate/support": "^12.0",
         "illuminate/http": "^12.0",
-         "php": ">=8.2",
-        "another-vendor/package": "1.*"
+         "php": ">=8.2"
     },
     "extra": {
         "laravel": {
@@ -24,5 +23,14 @@
                 "Vagrant\\Exchange\\ServiceProvider"
             ]
         }
-    }
+    },
+        "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/olgalukianova250782/exchange.git"
+        }
+    ]
 }
+
